--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>7B Timetable</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="waves"></div>
@@ -36,13 +37,10 @@
     <div class="next-lesson-section fade">
       <span class="label">Next Lesson</span>
       <h3 id="lesson">Loading...</h3>
-      <div id="timer">Starts in: --:--</div>
+      <div id="timer"></div>
     </div>
 
-    <div id="timetableList" class="fade">
-      <strong>Today's Schedule</strong>
-      <!-- Timetable will be populated by JavaScript -->
-    </div>
+    <div id="timetableList" class="fade"></div>
   </div>
 
   <script src="script.js"></script>
