--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <div class="lesson-section current-lesson">
       <span class="label">Current Lesson</span>
       <h3 id="currentLesson">No current lesson</h3>
+      <div id="currentTimer" class="countdown-timer current-timer">--:--:--</div>
     </div>
 
     <div class="lesson-section next-lesson">
       <span class="label">Next Lesson</span>
       <h3 id="nextLesson">No next lesson</h3>
-      <div id="nextTimer" class="countdown-timer">--:--:--</div>
+      <div id="nextTimer" class="countdown-timer next-timer">--:--:--</div>
     </div>
 
     <div id="timetableList" class="timetable-container">
