--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
       <h2 id="day">Monday</h2>
     </div>
 
-    <div class="lesson-section current-lesson">
-      <span class="label">Current Lesson</span>
-      <h3 id="currentLesson">No current lesson</h3>
-      <div id="currentTimer" class="countdown-timer current-timer">--:--:--</div>
-    </div>
+    <div class="main-content">
+      <div class="side-panel">
+        <div class="lesson-section current-lesson">
+          <span class="label">Current Lesson</span>
+          <h3 id="currentLesson">No current lesson</h3>
+          <div id="currentTimer" class="countdown-timer current-timer">--:--:--</div>
+        </div>
 
-    <div class="lesson-section next-lesson">
-      <span class="label">Next Lesson</span>
-      <h3 id="nextLesson">No next lesson</h3>
-      <div id="nextTimer" class="countdown-timer next-timer">--:--:--</div>
-    </div>
+        <div class="lesson-section next-lesson">
+          <span class="label">Next Lesson</span>
+          <h3 id="nextLesson">No next lesson</h3>
+          <div id="nextTimer" class="countdown-timer next-timer">--:--:--</div>
+        </div>
+      </div>
 
-    <div id="timetableList" class="timetable-container">
-      <strong>Today's Schedule</strong>
-      <div class="timetable-content"></div>
+      <div class="timetable-container">
+        <strong>Today's Schedule</strong>
+        <div class="timetable-content" id="timetableList"></div>
+      </div>
     </div>
   </div>
 
