Add Creamo button to index.html
Added a Creamo button linking to the Creamo website.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,20 @@
       </div>
 
       <div class="timetable-container">
-        <strong>Today's Schedule</strong>
+        <div class="timetable-header">
+          <strong>Today's Schedule</strong>
+          <div class="timetable-subtitle" id="scheduleSummary">Loading...</div>
+        </div>
         <div class="timetable-content" id="timetableList"></div>
       </div>
     </div>
   </div>
+
+  <!-- Creamo Button -->
+  <a href="https://creamo.pages.dev" class="creamo-button" target="_blank">
+    <span class="creamo-icon">✨</span>
+    <span>Creamo</span>
+  </a>
 
   <script src="script.js"></script>
 </body>
